UI added to project, some feture added.